k8s/cilium/manifests/simple/cnp/cnp_allow_empire_only.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-from-empire"
spec:
  description: "Allow any traffic from Org empire"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire # OK
        #    toPorts:
        #    - ports:
        #      - port: "80"
        #        protocol: TCP
